1.4 beta 1
==========
(Zuki Ebetsu)
- Fix malformed Japanese texts in RSS feed
  SF Patch #1455790, fixes SF bug #1456585
  
(Stuart Lewis)
- Fix problem with make-handle-config throwing NullPointerException
  SF Patch #1455463, fixes SF bug #1455457

1.4 alpha 1
===========
(Robert Tansley)
- Fix logic in EditItemServlet to enable removal of blank metadata values.
  Fixes bug #1358197.

(Robert Tansley)
- Error displayed on 'choose collection' submit screen instead of blank
  collection list and 'next >' control (which led to error).  Fixes SF bug
  #1363633.

(Anonymous)
- ResourcePolicy.setEPerson(null) now works (was previously setting
  epersongroup_id column to null).  Closes SF bug #1255264.

(Robert Tansley)
- search.index.* configuration lines must now include the schema
  (e.g. dc.title.*).  Note search.index.* no longer backwards compatible. Can
  now also specify unqualified elements (e.g. dc.creator).  Also fixes SF bug
  #1443649.

(Scott Yeadon)
- Add support for branded preview image
  SF Patches: #1330829, #1430437

(Navalkishore Sarda, Scott Yeadon)
- Add/replace Creative Commons in 'edit item' tool (SF patch #1172755)

(Richard Jones)
- Customisable item listing columns and browse indices (SF patch #1324631)

(Scott Yeadon)
- Script for updating handle prefixes (e.g. for moving from development to production)
- Configurable boolean search operator

(Miguel Ferreira)
- Controlled vocabulary patch to provide search on classification terms, and
  addition of terms during submission.
  SF Patch: #1244559

(Richard Jones) 
- Add 'visibility' element to input-forms.xml
  SF Patch #1368160

(Martin Hald)
- Log4J enhancement to use XML configuration
  SF Patch #1224389
  
(Dorothea Salo)
- Prevent ClassCastException for withdrawn items
  Fixes SF Bug #1333678
  SF Patch #1353368
  
(Larry Stone)
- Fix for extraneous '/' browse links
  SF Patch #1393365
  
(Aneesh Joy)
- Browse by subject feature; SF Patch #1193600

(Andrea Bollini)